# Yxis

./: .gitmodules  CMakeLists.txt
YxisEngine/: CMakeLists.txt
YxisEngine/include/: Application.h  EntryPoint.h  yxis.h
YxisEngine/include/Yxis/: Application.h  EntryPoint.h  Logger.h  definitions.h  pch.h
YxisEngine/include/Yxis/Events/: EventDispatcher.h  IEvent.h  IKeyboardEvent.h  IWindowResizedEvent.h
YxisEngine/src/: Application.cpp  Logger.cpp  VulkanBackend.cpp  VulkanBackend.h  Window.cpp  Window.h  internal_pch.h  yxis.cpp
YxisEngine/src/Events/: EventDispatcher.cpp
YxisEngine/src/Vulkan/: Device.cpp  Device.h  DeviceMemoryManager.cpp  DeviceMemoryManager.h  Swapchain.cpp  Swapchain.h  TimelineSemaphore.cpp  TimelineSemaphore.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanUtilities.cpp  VulkanUtilities.h
YxisSandbox/: CMakeLists.txt
YxisSandbox/shaders/: fs_main.hlsl  vs_main.hlsl
YxisSandbox/src/: main.cpp
cmake/: utils.cmake
